--- a/Angular/src/app/Webcomponent/owner-signup/owner-signup.component.html
+++ b/Angular/src/app/Webcomponent/owner-signup/owner-signup.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label for="conform_password">Confirm Password : </label>
-                <input type="password" name="conform_password" class="form-control" placeholder="conform_password" [(ngModel)]="temp" >
+                <input type="password" name="conform_password" class="form-control" placeholder="conform password" [(ngModel)]="temp" >
                 <div *ngIf="temp!=form.password" style="color: red;">Password didnt match</div>
               </div>
             <div class="text-center">
