--- a/Angular/src/app/Webcomponent/cart/cart.component.html
+++ b/Angular/src/app/Webcomponent/cart/cart.component.html
@@ -1,1 +1,102 @@
-<p>cart works!</p>
+
+
+<nav class="navbar navbar-light fixed-top bg-dark ">
+        
+    <a class="navbar-brand text-light">Ecommerce Site</a>
+    <div style="color:aliceblue ;font-size: 30px;">Welcome to Cart</div>
+    <a href="#" class="previous">&laquo; Back to Shopping</a>
+
+</nav>
+<section class="h-100 h-custom">
+    <div class="container h-100 py-5">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col">
+  
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col" class="h5">Shopping Bag</th>
+                  <th scope="col">Product Type</th>
+                  <th scope="col">Quantity</th>
+                  <th scope="col">Price</th>
+                </tr>
+              </thead>
+              <tbody>
+
+                <tr *ngFor="let i of [0,1,2]">
+                  <th scope="row">
+                    <div class="d-flex align-items-center">
+                      <img src=".." class="img-fluid rounded-3"
+                        style="width: 120px;margin-right:20px;" alt="Book">
+                      <div class="flex-column ms-4">
+                        <p class="mb-2">Mobile Phone</p>
+                        <p class="mb-0">Summa edha writing</p>
+                      </div>
+                    </div>
+                  </th>
+                  <td class="align-middle">
+                    <p class="mb-0" style="font-weight: 500;">Digital</p>
+                  </td>
+                  <td class="align-middle">
+                    <div class="d-flex flex-row">
+                      <button class="btn btn-link px-2"
+                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
+                        <i class="fas fa-minus"></i>
+                      </button>
+  
+                      <input id="form1" min="0" name="quantity" value="2" type="number"
+                        class="form-control form-control-sm" style="width: 50px;" />
+  
+                      <button class="btn btn-link px-2"
+                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
+                        <i class="fas fa-plus"></i>
+                      </button>
+                    </div>
+                  </td>
+                  <td class="align-middle">
+                    <p class="mb-0" style="font-weight: 500;">$9.99</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+  
+          <div class="card shadow-2-strong mb-5 mb-lg-0" style="border-radius: 16px;">
+            <div class="card-body p-4">
+  
+              <div class="row">
+                <div class="col-lg-12 col-xl-12">
+                  <div class="d-flex justify-content-between" style="font-weight: 500;">
+                    <p class="mb-2">Subtotal</p>
+                    <p class="mb-2">$23.49</p>
+                  </div>
+  
+                  <div class="d-flex justify-content-between" style="font-weight: 500;">
+                    <p class="mb-0">Shipping</p>
+                    <p class="mb-0">$2.99</p>
+                  </div>
+  
+                  <hr class="my-4">
+  
+                  <div class="d-flex justify-content-between mb-4" style="font-weight: 500;">
+                    <p class="mb-2">Total (tax included)</p>
+                    <p class="mb-2">$26.48</p>
+                  </div>
+                  
+                  <button type="button" class="btn btn-primary " style="float: right;">
+                    <div class="d-flex justify-content-between">
+                      <span>Checkout </span>
+                    </div>
+                  </button>
+  
+                </div>
+              </div>
+  
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+  </section>
