--- a/Angular/src/app/Webcomponent/home-page/home-page.component.css
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.css
@@ -1,4 +1,12 @@
-
+body{
+   background-color: #B9EDDD;
+}
+.nav-card{
+    max-width: 7rem;
+    max-height: 7rem;
+     border-radius: 15%;
+     margin-left:150px;
+}
 #login-dp{
     min-width: 250px;
     padding: 14px 14px 0;
@@ -51,4 +59,64 @@
 }
 .top-bar{
     margin-top: 100px;
+}
+.buy-button{
+    
+
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 15px;
+    line-height: 1;
+    border-radius: 500px;
+    transition-property: background-color,border-color,color,box-shadow,filter;
+    transition-duration: .3s;
+    border: 1px solid transparent;
+    letter-spacing: 1px;
+    min-width: 100px;
+    white-space: normal;
+    font-weight: 700;
+    text-align: center;
+    padding: 12px 15px 16px;
+    color: #fff;
+    background-color: #15883e;
+    height: 48px;
+
+}
+.buy-button:hover{
+    background-color: #1db954;
+}
+
+.add-cart-button{
+    
+
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 15px;
+    line-height: 1;
+    border-radius: 500px;
+    transition-property: background-color,border-color,color,box-shadow,filter;
+    transition-duration: .3s;
+    border: 1px solid transparent;
+    letter-spacing: 2px;
+    min-width: 100px;
+    margin-left: 10px;
+    white-space: normal;
+    font-weight: 700;
+    text-align: center;
+    padding: 12px 10px 16px;
+    color: #fff;
+    background-color: #faea0e;
+    height: 48px;
+
+}
+.add-cart-button:hover{
+    background-color: #a89f17;
+}
+.top-heading{
+    padding-top: 30px;
+}
+input[type=search]::-webkit-search-cancel-button {
+    -webkit-appearance: searchfield-cancel-button;
 }
