--- a/Angular/src/app/Webcomponent/owner-login/owner-login.component.html
+++ b/Angular/src/app/Webcomponent/owner-login/owner-login.component.html
@@ -14,7 +14,7 @@
             <div *ngIf="email.invalid && (email.dirty || email.touched)" style="color: red;">Email Must be Valid</div>
             <div class="form-group">
               <label for="password">Password : </label>
-              <input type="password" name="password" class="form-control" placeholder="password" [(ngModel)]="form.password" #password="ngModel" required>
+              <input type="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="form.password" #password="ngModel" required>
               <div *ngIf="password.invalid && (password.dirty || password.touched)" style="color: red;">Password can't be empty</div>
               </div>
             <div class="text-center">
