--- a/Angular/src/app/Webcomponent/home-page/home-page.component.html
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.html
@@ -73,15 +73,15 @@
    <div class="text-center top-heading"><h1>Mobile Phones</h1></div>
    <div class="row" id="mobile" style="margin-left: 30px;margin-right: 30px;">
      
-     <div *ngFor="let n of [0,1,2,3,4,5,6,7,8,9,10,11]" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
+     <div *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
       <img src="..\assets\images\mobile.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title">{{n.name}}</h5>
+        <p class="card-text">{{n.description}}</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Price:</li>
-        <li class="list-group-item">Quantity Left:</li>
+        <li class="list-group-item">Price:{{n.price}}</li>
+        <li class="list-group-item">Quantity Left:{{n.count}}</li>
       </ul>
       <div class="card-body">
         <a href="#" class="buy-button">⚡Buy now</a>
@@ -93,15 +93,15 @@
    <div class="text-center top-heading"><h1>Laptops</h1></div>
    <div class="row" id="laptop" style="margin-left: 30px;margin-right: 30px;">
      
-     <div *ngFor="let n of [0,1,2,3,4,5,6,7,8,9,10,11]" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
+     <div *ngFor="let n of laptop" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
       <img src="..\assets\images\laptop.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title">{{n.name}}</h5>
+        <p class="card-text">{{n.description}}</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Price:</li>
-        <li class="list-group-item">Quantity Left:</li>
+        <li class="list-group-item">Price:{{n.price}}</li>
+        <li class="list-group-item">Quantity Left:{{n.count}}</li>
       </ul>
       <div class="card-body">
         <a href="#" class="buy-button">⚡Buy now</a>
@@ -113,15 +113,15 @@
    <div class="text-center top-heading"><h1>Bags</h1></div>
    <div class="row" id="bags" style="margin-left: 30px;margin-right: 30px;">
      
-     <div *ngFor="let n of [0,1,2,3,4,5,6,7,8,9,10,11]" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
+     <div *ngFor="let n of bag" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
       <img src="..\assets\images\bags.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title">{{n.name}}</h5>
+        <p class="card-text">{{n.description}}</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Price:</li>
-        <li class="list-group-item">Quantity Left:</li>
+        <li class="list-group-item">Price:{{n.price}}</li>
+        <li class="list-group-item">Quantity Left:{{n.count}}</li>
       </ul>
       <div class="card-body">
         <a href="#" class="buy-button">⚡Buy now</a>
@@ -133,15 +133,15 @@
    <div class="text-center top-heading"><h1>Decorators</h1></div>
    <div class="row" id="decorators" style="margin-left: 30px;margin-right: 30px;">
      
-     <div *ngFor="let n of [0,1,2,3,4,5,6,7,8,9,10,11]" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
+     <div *ngFor="let n of decorators" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
       <img src="..\assets\images\decorators.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title">{{n.name}}</h5>
+        <p class="card-text">{{n.description}}</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Price:</li>
-        <li class="list-group-item">Quantity Left:</li>
+        <li class="list-group-item">Price:{{n.price}}</li>
+        <li class="list-group-item">Quantity Left:{{n.count}}</li>
       </ul>
       <div class="card-body">
         <a href="#" class="buy-button">⚡Buy now</a>
