--- a/Angular/src/app/Webcomponent/product-upload/product-upload.component.html
+++ b/Angular/src/app/Webcomponent/product-upload/product-upload.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="form-group">
                 <label>Product Type: </label>
-                <select name="" id="" [(ngModel)]="product.type" [ngModelOptions]="{standalone: true}">
+                <select name="" id="" [(ngModel)]="product.category" [ngModelOptions]="{standalone: true}">
                     <option value="Mobile">Mobile</option>
                     <option value="Laptop">Laptop</option>
                     <option value="Bags">Bags</option>
@@ -28,7 +28,7 @@
             
             <div class="form-group">
                 <label>Product Quantity: </label>
-                <input type="text"  class="form-control" placeholder="Product Quantity" [(ngModel)]="product.quantity" [ngModelOptions]="{standalone: true}" required>
+                <input type="text"  class="form-control" placeholder="Product Quantity" [(ngModel)]="product.count" [ngModelOptions]="{standalone: true}" required>
               </div >
              
                 <input type="file" (change)="onSelectFile($event)">
