--- a/Angular/src/app/Webcomponent/cart/cart.component.html
+++ b/Angular/src/app/Webcomponent/cart/cart.component.html
@@ -24,19 +24,18 @@
               </thead>
               <tbody>
 
-                <tr *ngFor="let i of [0,1,2]">
+                <tr *ngFor="let i of cartItems">
                   <th scope="row">
                     <div class="d-flex align-items-center">
                       <img src=".." class="img-fluid rounded-3"
                         style="width: 120px;margin-right:20px;" alt="Book">
                       <div class="flex-column ms-4">
-                        <p class="mb-2">Mobile Phone</p>
-                        <p class="mb-0">Summa edha writing</p>
+                        <p class="mb-2">{{i.name}}</p>
                       </div>
                     </div>
                   </th>
                   <td class="align-middle">
-                    <p class="mb-0" style="font-weight: 500;">Digital</p>
+                    <p class="mb-0" style="font-weight: 500;">{{i.category}}</p>
                   </td>
                   <td class="align-middle">
                     <div class="d-flex flex-row">
@@ -45,7 +44,7 @@
                         <i class="fas fa-minus"></i>
                       </button>
   
-                      <input id="form1" min="0" name="quantity" value="2" type="number"
+                      <input id="form1" min="0" name="quantity" value="{{i.quantity}}" type="number"
                         class="form-control form-control-sm" style="width: 50px;" />
   
                       <button class="btn btn-link px-2"
@@ -55,7 +54,7 @@
                     </div>
                   </td>
                   <td class="align-middle">
-                    <p class="mb-0" style="font-weight: 500;">$9.99</p>
+                    <p class="mb-0" style="font-weight: 500;">{{i.price}}</p>
                   </td>
                 </tr>
               </tbody>
@@ -69,19 +68,19 @@
                 <div class="col-lg-12 col-xl-12">
                   <div class="d-flex justify-content-between" style="font-weight: 500;">
                     <p class="mb-2">Subtotal</p>
-                    <p class="mb-2">$23.49</p>
+                    <p class="mb-2">{{total}}</p>
                   </div>
   
                   <div class="d-flex justify-content-between" style="font-weight: 500;">
                     <p class="mb-0">Shipping</p>
-                    <p class="mb-0">$2.99</p>
+                    <p class="mb-0">30</p>
                   </div>
   
                   <hr class="my-4">
   
                   <div class="d-flex justify-content-between mb-4" style="font-weight: 500;">
                     <p class="mb-2">Total (tax included)</p>
-                    <p class="mb-2">$26.48</p>
+                    <p class="mb-2">{{total+30}}</p>
                   </div>
                   
                   <button type="button" class="btn btn-primary " style="float: right;">
