--- a/Angular/src/app/Webcomponent/home-page/home-page.component.html
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.html
@@ -9,7 +9,7 @@
         
             <a class="navbar-brand text-light">Ecommerce Site</a>
             <form class="form-inline" (ngSubmit)="searcher()">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style=" width: 425.6px;" [(ngModel)]="searchItem" [ngModelOptions]="{standalone: true}">
+              <input (input)="searcher()" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style=" width: 425.6px;" [(ngModel)]="searchItem" [ngModelOptions]="{standalone: true}">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit" >Search</button>
             </form>
         <div *ngIf="!isLoggedIn">
@@ -70,7 +70,7 @@
       </div>
         
    </div>
-   <div class="text-center top-heading"><h1>Mobile Phones</h1></div>
+   <div *ngIf="mobile.length!=0" class="text-center top-heading"><h1>Mobile Phones</h1></div>
    <div class="row" id="mobile" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
@@ -90,7 +90,7 @@
       </div>
     </div>
    </div>
-   <div class="text-center top-heading"><h1>Laptops</h1></div>
+   <div *ngIf="laptop.length!=0" class="text-center top-heading"><h1>Laptops</h1></div>
    <div class="row" id="laptop" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of laptop" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
@@ -110,7 +110,7 @@
       </div>
     </div>
    </div>
-   <div class="text-center top-heading"><h1>Bags</h1></div>
+   <div *ngIf="bag.length!=0" class="text-center top-heading"><h1>Bags</h1></div>
    <div class="row" id="bags" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of bag" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
@@ -130,7 +130,7 @@
       </div>
     </div>
    </div>
-   <div class="text-center top-heading"><h1>Decorators</h1></div>
+   <div *ngIf="decorators.length!=0" class="text-center top-heading"><h1>Decorators</h1></div>
    <div class="row" id="decorators" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of decorators" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
