changes in cart

--- a/Angular/src/app/Webcomponent/cart/cart.component.html
+++ b/Angular/src/app/Webcomponent/cart/cart.component.html
@@ -39,19 +39,22 @@
                   </td>
                   <td class="align-middle">
                     <div class="d-flex flex-row">
-                      <button class="btn btn-link px-2"
+                      <button  class="btn btn-link px-2"
                         onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                         <i class="fas fa-minus"></i>
                       </button>
   
-                      <input id="form1" min="0" name="quantity" value="{{i.quantity}}" type="number"
+                      <input id="form1" min="1" (input)="changeCart(i)" name="quantity" [(ngModel)]="i.quantity" type="number"
                         class="form-control form-control-sm" style="width: 50px;" />
   
                       <button class="btn btn-link px-2"
+                      
                         onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
                         <i class="fas fa-plus"></i>
                       </button>
                     </div>
+                    {{i.quantity}}
+                   
                   </td>
                   <td class="align-middle">
                     <p class="mb-0" style="font-weight: 500;">{{i.price}}</p>
