--- a/Angular/src/app/Webcomponent/cart/cart.component.html
+++ b/Angular/src/app/Webcomponent/cart/cart.component.html
@@ -60,7 +60,7 @@
                     <p class="mb-0" style="font-weight: 500;">{{i.price}}</p>
                   </td>
                   <td>
-                    <button type="button" (click)="deteleCartItem(i.cartid)" class="btn btn-outline-danger">Delete</button>
+                    <button type="button" (click)="deteleCartItem(i.id)" class="btn btn-outline-danger">Delete</button>
                   </td>
                 </tr>
               </tbody>
@@ -86,7 +86,7 @@
   
                   <div class="d-flex justify-content-between mb-4" style="font-weight: 500;">
                     <p class="mb-2">Total (tax included)</p>
-                    <p class="mb-2">{{total+30}}</p>
+                    <p class="mb-2">{{total+30 }}</p>
                   </div>
                   
                   <button type="button" class="btn btn-primary " style="float: right;">
