--- a/Angular/src/app/Webcomponent/home-page/home-page.component.html
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.html
@@ -74,7 +74,7 @@
    <div class="row" id="mobile" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
-      <img src="..\assets\images\mobile.webp" class="card-img-top" alt="...">
+      <img src={{n.imageURL}} class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
@@ -94,7 +94,7 @@
    <div class="row" id="laptop" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of laptop" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
-      <img src="..\assets\images\laptop.jpeg" class="card-img-top" alt="...">
+      <img src={{n.imageURL}} class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
