--- a/Angular/src/app/Webcomponent/product-upload/product-upload.component.html
+++ b/Angular/src/app/Webcomponent/product-upload/product-upload.component.html
@@ -11,10 +11,10 @@
             <div class="form-group">
                 <label>Product Type: </label>
                 <select name="" id="" [(ngModel)]="product.category" [ngModelOptions]="{standalone: true}">
-                    <option value="Mobile">Mobile</option>
-                    <option value="Laptop">Laptop</option>
-                    <option value="Bags">Bags</option>
-                    <option value="decorators">Decorators</option>
+                    <option value="MOBILE">MOBILE</option>
+                    <option value="LAPTOP">LAPTOP</option>
+                    <option value="BAG">BAG</option>
+                    <option value="DECORATORs">DECORATORs</option>
                 </select>
               </div>
               <div class="form-group">
