--- a/Angular/src/app/Webcomponent/cart/cart.component.html
+++ b/Angular/src/app/Webcomponent/cart/cart.component.html
@@ -1,7 +1,7 @@
 
 
 <nav class="navbar navbar-light fixed-top bg-dark ">
-        
+
     <a class="navbar-brand text-light">Ecommerce Site</a>
     <div style="color:aliceblue ;font-size: 30px;">Welcome to Cart</div>
     <a href="#" class="previous">&laquo; Back to Shopping</a>
@@ -11,7 +11,7 @@
     <div class="container h-100 py-5">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col">
-  
+
           <div class="table-responsive">
             <table class="table">
               <thead>
@@ -43,18 +43,18 @@
                         onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                         <i class="fas fa-minus"></i>
                       </button>
-  
+
                       <input id="form1" min="1" (input)="changeCart(i)" name="quantity" [(ngModel)]="i.quantity" type="number"
                         class="form-control form-control-sm" style="width: 50px;" />
-  
+
                       <button class="btn btn-link px-2"
-                      
+
                         onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
                         <i class="fas fa-plus"></i>
                       </button>
                     </div>
                     {{i.quantity}}
-                   
+
                   </td>
                   <td class="align-middle">
                     <p class="mb-0" style="font-weight: 500;">{{i.price}}</p>
@@ -66,41 +66,41 @@
               </tbody>
             </table>
           </div>
-  
+
           <div class="card shadow-2-strong mb-5 mb-lg-0" style="border-radius: 16px;">
             <div class="card-body p-4">
-  
+
               <div class="row">
                 <div class="col-lg-12 col-xl-12">
                   <div class="d-flex justify-content-between" style="font-weight: 500;">
                     <p class="mb-2">Subtotal</p>
                     <p class="mb-2">{{total}}</p>
                   </div>
-  
+
                   <div class="d-flex justify-content-between" style="font-weight: 500;">
                     <p class="mb-0">Shipping</p>
                     <p class="mb-0">30</p>
                   </div>
-  
+
                   <hr class="my-4">
-  
+
                   <div class="d-flex justify-content-between mb-4" style="font-weight: 500;">
                     <p class="mb-2">Total (tax included)</p>
                     <p class="mb-2">{{total+30 }}</p>
                   </div>
-                  
-                  <button type="button" class="btn btn-primary " style="float: right;">
+
+                  <button (click)="checkoutSucess(cartItems)" type="button" class="btn btn-primary " style="float: right;">
                     <div class="d-flex justify-content-between">
                       <span>Checkout </span>
                     </div>
                   </button>
-  
+
                 </div>
               </div>
-  
+
             </div>
           </div>
-  
+
         </div>
       </div>
     </div>
