--- a/Angular/src/app/Webcomponent/home-page/home-page.component.html
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.html
@@ -34,9 +34,9 @@
       <div class=" col-lg-3 col-md-4 col-sm-6">
         <h1 style="padding-top: 30px;">Top Catagories</h1>
       </div>
-      <div class="row " style="display: flex;">
+      <div class="row" style="display: flex;">
         <a href="#mobile">
-          <div class="nav-card card col-lg-3 col-md-4 col-sm-6 text-center" >
+          <div class="nav-card card col-lg-3 col-md-6 col-sm-6 text-center" >
               <img  class="card-img-top " src="..\assets\images\mobile.webp" class="card-img-top" alt="mobile" style="height: 60px;width: 60px; margin-left: 10px;">
               <div>
                 <p class="text-center">Mobile</p>
@@ -44,7 +44,7 @@
             </div>
           </a>
           <a href="#laptop">
-            <div class="nav-card card  col-lg-3 col-md-4 col-sm-6" style="max-width: 7rem;max-height: 7rem; border-radius: 15%;">
+            <div class="nav-card card  col-lg-3 col-md-6 col-sm-6" style="max-width: 7rem;max-height: 7rem; border-radius: 15%;">
               <img src="..\assets\images\laptop.jpeg" class="card-img-top " alt="laptop" style="height: 60px;width: 60px; margin-left: 10px;">
               <div>
                 <p class="text-center">Laptops</p>
@@ -52,7 +52,7 @@
             </div>
           </a>
           <a href="#bags">
-            <div class="nav-card card  col-lg-3 col-md-4 col-sm-6" style="max-width: 7rem;max-height: 7rem; border-radius: 15%;">
+            <div class="nav-card card  col-lg-3 col-md-6 col-sm-6" style="max-width: 7rem;max-height: 7rem; border-radius: 15%;">
               <img src="..\assets\images\bags.webp" class="card-img-top" alt="bags" style="height: 60px;width: 60px; margin-left: 10px;">
               <div>
                 <p class="text-center">Bags</p>
@@ -60,7 +60,7 @@
             </div>
           </a>
           <a href="#decorators">
-            <div class="nav-card card  col-lg-3 col-md-4 col-sm-6" style="max-width: 7rem;max-height: 7rem;border-radius: 15%;">
+            <div class="nav-card card  col-lg-3 col-md-6 col-sm-6" style="max-width: 7rem;max-height: 7rem;border-radius: 15%;">
               <img src="..\assets\images\decorators.jpeg" class="card-img-top" alt="mobile" style="height: 60px;width: 60px;margin-left: 10px;">
               <div>
                 <p class="text-center">Decorators</p>
@@ -73,8 +73,8 @@
    <div *ngIf="mobile.length!=0" class="text-center top-heading"><h1>Mobile Phones</h1></div>
    <div class="row" id="mobile" style="margin-left: 30px;margin-right: 30px;">
      
-     <div *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
-      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/mobile.webp';">
+     <div *ngFor="let n of mobile" class="card col-lg-3 col-md-6 col-sm-12" style="width: 18rem; margin-top: 30px;  ">
+      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg';">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
@@ -94,7 +94,7 @@
    <div class="row" id="laptop" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of laptop" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
-      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/laptop.jpeg';">
+      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg';">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
@@ -114,7 +114,7 @@
    <div class="row" id="bags" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of bag" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
-      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/bags.webp'">
+      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg'">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
@@ -134,7 +134,7 @@
    <div class="row" id="decorators" style="margin-left: 30px;margin-right: 30px;">
      
      <div *ngFor="let n of decorators" class="card col-lg-3 col-md-6 col-sm-12 " style="width: 18rem; margin-top: 30px;  ">
-      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/decorators.jpeg';">
+      <img src={{n.imageURL}} class="card-img-top" alt="..." onerror="this.src='../assets/images/unnamed.jpg';">
       <div class="card-body">
         <h5 class="card-title">{{n.name}}</h5>
         <p class="card-text">{{n.description}}</p>
