Included admin login in Frontend

--- a/Angular/src/app/Webcomponent/login/login.component.html
+++ b/Angular/src/app/Webcomponent/login/login.component.html
@@ -7,7 +7,7 @@
               Logged In successfully
             </div>
             <div class="card-body auth-card">
-            <div style="text-align: center;"><h2>Customer Login</h2><div>
+            <div style="text-align: center;"><h2>Login</h2><div>
               <form (ngSubmit)="check()" #myForm="ngForm">  
                 <div class="form-group">
                   <label for="email">Email : </label>
@@ -26,9 +26,9 @@
               <div class="text-center sign-up">
                 Don`t have an account ? <a [routerLink]="['/signup']">Sign Up</a> here!!.
               </div>
-              <div class="text-center sign-up">
+              <!-- <div class="text-center sign-up">
                 Shop owner ?  <a [routerLink]="['/owner-login']">login here.</a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
