--- a/Angular/src/app/Webcomponent/owner-login/owner-login.component.html
+++ b/Angular/src/app/Webcomponent/owner-login/owner-login.component.html
@@ -12,7 +12,7 @@
               <input type="text" name="email" class="form-control" placeholder="Email" [(ngModel)]="form.email" #email="ngModel" required>
             </div>
             <div *ngIf="email.invalid && (email.dirty || email.touched)" style="color: red;">Email Must be Valid</div>
-            <div class="form-group">
+            <div class="form-group">`
               <label for="password">Password : </label>
               <input type="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="form.password" #password="ngModel" required>
               <div *ngIf="password.invalid && (password.dirty || password.touched)" style="color: red;">Password can't be empty</div>
@@ -28,7 +28,7 @@
             Don`t have an account ? <a [routerLink]="['/owner-signup']">Sign Up</a> here!!.
           </div>
           <div class="text-center sign-up">
-            Customer ?  <a [routerLink]="['/login']">login here.</a>
+            Customer ?  <a [routerLink]="['/qwner-login']">login here.</a>
           </div>
         </div>
       </div>
