added cart with number and image url when searching

--- a/Angular/src/app/Webcomponent/home-page/home-page.component.css
+++ b/Angular/src/app/Webcomponent/home-page/home-page.component.css
@@ -123,13 +123,24 @@ input[type=search]::-webkit-search-cancel-button {
 .box-category:hover{
     text-decoration: none;
 }
-span{
-    font-size: 14px;
-    font-weight: 900;
-    position: absolute;
-    border: solid blue;
-    border-radius: 60%;
-    height: 14px;
-    width: 8px;
-    background:blue;
-}
+
+.badge {
+    padding-left: 9px;
+    padding-right: 9px;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    border-radius: 9px;
+  }
+  
+  .label-warning[href],
+  .badge-warning[href] {
+    background-color: #c67605;
+  }
+  #lblCartCount {
+      font-size: 12px;
+      background: #ff0000;
+      color: #fff;
+      padding: 0 5px;
+      vertical-align: top;
+      margin-left: -10px; 
+  }
