--- a/Angular/src/styles.css
+++ b/Angular/src/styles.css
@@ -1,14 +1,13 @@
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
 
 .auth-card{
-  background: #61cb15;  
-  background: -webkit-linear-gradient(to right, #1c90de, #d012c3);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #7f0cd1, #c314ac); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #f1f3f3;  /* Chrome 10-25, Safari 5.1-6 */
+
   border-radius: 5px;
   box-shadow: 0px 0px 30px #f7f7f7;
 }
 label{
-  color: #fff;
+  color: black;
   font-weight: 700;
 }
 .user-image{
@@ -26,8 +25,9 @@ label{
 .btn-my{
   background-color: #d39e00;
   border-color: #d39e00;
-  color: #fff;
+  color: black;
 }
 .simple-keyboard {
   max-width: 850px;
 }
+
