--- a/Angular/src/app/Webcomponent/delivery/delivery.component.html
+++ b/Angular/src/app/Webcomponent/delivery/delivery.component.html
@@ -22,6 +22,9 @@
 		<i class="fa fa-check main-content__checkmark" id="checkmark"></i>
 		<p class="main-content__body" data-lead-id="main-content-body">Thanks for Shopping withus.Your product will be delivered soon .</p>
 	</div>
+	<div>
+		<h1> Redirecting in {{time}} seconds</h1>
+	</div>
 
 	<footer class="site-footer" id="footer">
 		<p class="site-footer__fineprint" id="fineprint">Copyright ©2023 | All Rights Reserved</p>
