--- a/Angular/src/app/Webcomponent/login/login.component.html
+++ b/Angular/src/app/Webcomponent/login/login.component.html
@@ -10,13 +10,13 @@
             <div style="text-align: center;"><h2>Login</h2><div>
               <form (ngSubmit)="check()" #myForm="ngForm">  
                 <div class="form-group">
-                  <label for="email">Email : </label>
-                  <input type="text" name="email" class="form-control" placeholder="Email" [(ngModel)]="form.email" #email="ngModel" required>
+                  <!-- <label for="email">Email : </label> -->
+                  <input type="email" email="true" required name="email" class="form-control" placeholder="Email" [(ngModel)]="form.email" #email="ngModel" >
                 </div>
                 <div *ngIf="email.invalid && (email.dirty || email.touched)" style="color: red;">Email Must be Valid</div>
                 <div class="form-group">
-                  <label for="password">Password : </label>
-                  <input type="password" name="password" class="form-control" placeholder="PSassword" [(ngModel)]="form.password" #password="ngModel" required>
+                  <!-- <label for="password">Password : </label> -->
+                  <input type="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="form.password" #password="ngModel" required>
                   <div *ngIf="password.invalid && (password.dirty || password.touched)" style="color: red;">Password can't be empty</div>
                   </div>
                 <div class="text-center">
