--- a/Angular/src/app/Webcomponent/signup/signup.component.html
+++ b/Angular/src/app/Webcomponent/signup/signup.component.html
@@ -5,23 +5,23 @@
           <div style="text-align: center;"><h2>Customer SignUp</h2><div></div>
           <form  (ngSubmit)="submit()" #myForm="ngForm">  
             <div class="form-group">
-              <label for="name">Name : </label>
+              <!-- <label for="name">Name : </label> -->
               <input type="text" name="name" class="form-control" placeholder="UserName" [(ngModel)]="form.name">
             </div>
             <div class="form-group">
-              <label for="email">Email : </label>
-              <input type="text" name="email" class="form-control" placeholder="Email" [(ngModel)]="form.email" #email="ngModel" required>
+              <!-- <label for="email">Email : </label> -->
+              <input type="text" name="email" email="true" class="form-control" placeholder="Email" [(ngModel)]="form.email" #email="ngModel" required>
               <div *ngIf="email.invalid && (email.dirty || email.touched)" style="color: red;">Email Must be Valid</div>
             </div>
             <div class="form-group">
-              <label for="password">Password : </label>
+              <!-- <label for="password">Password : </label> -->
               <input type="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="form.password" #password="ngModel" required>
               <div *ngIf="password.invalid && (password.dirty || password.touched)" style="color: red;">Password Must be Valid</div>
             </div>
             <div class="form-group">
-                <label for="conform_password">Confirm Password : </label>
-                <input type="password" name="conform_password" class="form-control" placeholder="conform password" [(ngModel)]="temp" >
-                <div *ngIf="temp!=form.password" style="color: red;">Password didnt match</div>
+                <!-- <label for="conform_password">Confirm Password : </label> -->
+                <input type="password" name="conform_password" class="form-control" placeholder="confirm password" [(ngModel)]="temp" #conform_password="ngModel" required>
+                <div *ngIf="temp!=form.password && conform_password.touched" style="color: red;">Password didnt match</div>
               </div>
             <div class="text-center">
               <input [disabled]="(myForm.form.invalid || (temp!=form.password))" type="submit" class="btn btn-my" value="sign up" >
