removed spaces and refactored code

--- a/Angular/src/app/Webcomponent/product-upload/product-upload.component.html
+++ b/Angular/src/app/Webcomponent/product-upload/product-upload.component.html
@@ -20,7 +20,7 @@
                 <input type="text"  class="form-control" placeholder="Product description" [(ngModel)]="product.description" [ngModelOptions]="{standalone: true}" required>
               </div>
               <div class="form-group">
-                <input type="text"  class="form-control" placeholder="Product Price" [(ngModel)]="product.price" [ngModelOptions]="{standalone: true}" required>
+                <input type="number"  class="form-control" placeholder="Product Price" [(ngModel)]="product.price" [ngModelOptions]="{standalone: true}" required>
               </div>
             
             <div class="form-group">
@@ -31,7 +31,7 @@
                 <br>
                 <br>
               <div class="text-center">
-                <input   type="submit" multiple value="select" class="btn btn-my" value="Add Product">
+                <input  [disabled]="!isFormValid()" type="submit" multiple value="select" class="btn btn-my" value="Add Product">
               </div>
           </form>
         </div>
