--- a/Angular/src/app/Webcomponent/owner-signup/owner-signup.component.html
+++ b/Angular/src/app/Webcomponent/owner-signup/owner-signup.component.html
@@ -5,26 +5,22 @@
           <div style="text-align: center;"><h2>Owner SignUp</h2><div></div>
           <form  (ngSubmit)="submit()" #myForm="ngForm">  
             <div class="form-group">
-              <!-- <label for="name">Name : </label> -->
               <input type="text" name="name" class="form-control" placeholder="UserName" [(ngModel)]="form.name">
             </div>
             <div class="form-group">
-              <!-- <label for="email">Email : </label> -->
               <input type="text" email="true" name="email" class="form-control" placeholder="Email" [(ngModel)]="form.email" #email="ngModel" required>
               <div *ngIf="email.invalid && (email.dirty || email.touched)" style="color: red;">Email Must be Valid</div>
             </div>
             <div class="form-group">
-              <!-- <label for="password">Password : </label> -->
               <input type="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="form.password" #password="ngModel" required>
               <div *ngIf="password.invalid && (password.dirty || password.touched)" style="color: red;">Password Must be Valid</div>
             </div>
             <div class="form-group">
-                <!-- <label for="conform_password">Confirm Password : </label> -->
-                <input type="password" name="conform_password" class="form-control" placeholder="confirm password" [(ngModel)]="temp"  #conform_password="ngModel" required >
-                <div *ngIf="temp!=form.password && conform_password.touched" style="color: red;">Password didnt match</div>
+                <input type="password" name="conform_password" class="form-control" placeholder="confirm password" [(ngModel)]="password1"  #conform_password="ngModel" required >
+                <div *ngIf="password1!=form.password && conform_password.touched" style="color: red;">Password didnt match</div>
               </div>
             <div class="text-center">
-              <input [disabled]="(myForm.form.invalid || (temp!=form.password))" type="submit" class="btn btn-my" value="sign up" (click)="clicked()">
+              <input [disabled]="(myForm.form.invalid || (password1!=form.password))" type="submit" class="btn btn-my" value="sign up" (click)="clicked()">
             </div>
             <div *ngIf="isSubmitted">
                   Signed up Successfully
